--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cookie": "^0.6.0",
     "@types/uuid": "^10.0.0",
     "cookie": "^1.1.1",
+    "glob": "^13.0.3",
     "googleapis": "^171.4.0",
     "next": "16.1.6",
     "react": "19.2.3",
